--- a/index.html
+++ b/index.html
@@ -12,54 +12,49 @@
   <title>Colegio El Saber - Pagina Principal</title>
   <!-- LINKS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Animation CSS -->
-  <link href="css/animate.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.css" /> -->
 
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
+  <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css" /> -->
 
 
 </head>
 
 <body style="background-color: black;">
-  <header class="header">
-    <div style="width: 30%;">
-      <h2><a href="#">Colegio El Saber</a></h2>
-    </div>
+  <header class="header" id="Header">
+    <a class="btn btn-outline-secondary btn-lg" href="#">Colegio El Saber</a>
     <nav class="menu">
-      <ol>
-        <li><a class="btn btn-outline-light" href="#">Inicio</a></li>
-        <li><a class="btn btn-outline-light" href="#">¿Quienes Somos?</a></li>
-        <li><a class="btn btn-outline-light" href="#">Niveles</a></li>
-        <li><a class="btn btn-outline-light" href="#">Contacto</a></li>
+      <ol class="topnav" id="myTopnav">
+        <a class="btn btn-outline-light" href="#">Inicio</a>
+        <a class="btn btn-outline-light" href="#">¿Quienes Somos?</a>
+        <a class="btn btn-outline-light" href="#">Niveles</a>
+        <a class="btn btn-outline-light" href="#">Contacto</a>
       </ol>
     </nav>
   </header>
 
   <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
   <div id="carrousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/fondoP1.jpg" alt="el_saber_P1">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/fondoP1.jpg" alt="el_saber_P1">
+      </div>
+      <div class="carousel-item">
+        <img src="img/fondoP2.jpg" alt="Second slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="img/fondoP2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img src="..." alt="Third slide">
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 
   <h2>Listos para Comenzar</h2>
@@ -92,6 +87,7 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="js/index.js" type="text/javascript"></script>
 </body>
 
 </html>
