--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet"> -->
 
   <!-- TÍTULO -->
   <title>Colegio El Saber - Pagina Principal</title>
   <!-- LINKS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Animation CSS -->
@@ -23,21 +23,27 @@
 
 </head>
 
-<body style="background-color: black;">
+<body>
+  <i class="fa fa-bars burger-button" id="burger-menu"></i>
   <header class="header" id="Header">
-    <a class="btn btn-outline-secondary btn-lg" href="#">Colegio El Saber</a>
-    <nav class="menu">
-      <ol class="topnav" id="myTopnav">
-        <a class="btn btn-outline-light" href="#">Inicio</a>
-        <a class="btn btn-outline-light" href="#">¿Quienes Somos?</a>
-        <a class="btn btn-outline-light" href="#">Niveles</a>
-        <a class="btn btn-outline-light" href="#">Contacto</a>
-      </ol>
-    </nav>
+    <div class="container">
+      <h3 class="pull-right">Colegio El Saber</h3>
+      <nav class="menu">
+        <ol>
+          <img style="text-align: center" class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
+          <a class="btn btn-outline-dark" href="#inicio">Inicio</a>
+          <a class="btn btn-outline-dark" href="#quienesSomos">¿Quienes Somos?</a>
+          <a class="btn btn-outline-dark" href="#niveles">Niveles</a>
+          <a class="btn btn-outline-dark" href="#contacto">Contacto</a>
+        </ol>
+      </nav>
+    </div>
   </header>
+  <section id="inicio">
 
-  <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
-  <div id="carrousel" class="carousel slide" data-ride="carousel">
+
+    <!-- <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo"> -->
+  <!-- <div id="carrousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="img/fondoP1.jpg" alt="el_saber_P1">
@@ -54,40 +60,81 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+  </div> -->
 
+  </section>
+  <section id="quienesSomos">
 
-  <h2>Listos para Comenzar</h2>
+    <h2>¿Quienes Somos?</h2>
 
-  <h2> Objetivo </h2>
-  <h4>Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente aceptados, satisfechos y felices,
-    con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</h4>
-  <h2> Propósito </h2>
-  <h4>Como institución educativa ofrecer coeducación, y preparación individual, con elementos científicos y valores morales teniendo en cuenta su personalidad, nuevos modelos y cultura de paz dentro de un mundo competitivo.</h4>
-  <h2> Misión </h2>
-  <h4>Somos una institución educativa donde ofrecemos coeducación y preparación individual con elementos científicos, valores morales teniendo en cuenta su personalidad; valores educativos basados en la reforma educativa, CNB propuesta Mineduc
-    fortalecemos permanentemente la actualización y continuidad de nuestro proyecto educativo, por calidad, ajustándolo a las necesidades y demandas de la comunidad educativa, organizado en un equipo de trabajo para que el proceso de enseñanza se de
-    en un clima favorable dentro y fuera del aula y donde además brindamos apoyo a los tutores y personal docente, para que las funciones de orientación y dirección faciliten a los alumnos un mejor acompañamiento donde se integran los espacios de
-    comunicación y sobre todo contar con el apoyo de los padres de familia para que nos permitan como comunidad de educadores estar presentes y favorecer el desarrollo de nuestro entorno.</h4>
-  <h2> Visión </h2>
-  <h4>Ser una institución fuerte con identidad propia, donde cada uno de los integrantes de esta comunidad se sienta comprometido con el aprendizaje y desarrollo personal de los alumnos y alumnas, para que alcancen el éxito a nivel escolar y
-    profesional, brindando para ello una educación humanista, científica y tecnológica, trabajo en equipo, plena participación democrática, alto espíritu crítico y creativo y que de acuerdo a las relaciones humanas todo se dé bajo un clima de
-    respeto honestidad, tolerancia, responsabilidad, personal, orden, autodisciplina y lealtad donde también intervengan los derechos humanos, valores cívicos, valores institucionales, ajustándolos a las necesidades y demandas de la comunidad
-    educativa, convencidos de que la educación es la base del cambio.</h4>
-  <h2> Historia </h2>
-  <h4>“CENTRO EDUCATIVO INTEGRAL EL SABER”, inicio sus labores docentes, en el año 1980 en el inmueble ubicado en la casa de ladrillo, atrás de gasolinera Shell, San José Pinula, en donde actualmente funciona las clínicas del IGSS; se apertura en el
-    nivel de preprimaria y funcionó con el nombre de “JARDIN INFANTIL SAN JOSE”, estando activo durante cinco años, después de los cuales se solicita una ampliación de servicios para el nivel primaria. En esta cobertura se considera un nombre que
-    pueda integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL El SABER”.
-    Su fundadora y primera directora fue la Maestra de Educación Primaria Urbana María Martha Castilla quien cede la Dirección a su hija Anabella Eunice Maldonado Castilla y quién queda como directora de los niveles de preprimaria y primaria.
-    En el año de 2002 se traslada a otras instalaciones en la 2da. Calle 1-40 zona 2, donde actualmente funciona, ya con un inmueble con condiciones favorables se solicita la ampliación de servicios y jornadas especiales. Nivel Básico y
-    Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por Madurez, Bachillerato por
-    Madurez bajo la Dirección de Hugo Rolando Sandoval Castilla.
-  </h4>
+    <h2> Objetivo </h2>
+    <h4>Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente aceptados, satisfechos y
+      felices,
+      con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</h4>
+    <h2> Propósito </h2>
+    <h4>Como institución educativa ofrecer coeducación, y preparación individual, con elementos científicos y valores morales teniendo en cuenta su personalidad, nuevos modelos y cultura de paz dentro de un mundo competitivo.</h4>
+    <h2> Misión </h2>
+    <h4>Somos una institución educativa donde ofrecemos coeducación y preparación individual con elementos científicos, valores morales teniendo en cuenta su personalidad; valores educativos basados en la reforma educativa, CNB propuesta Mineduc
+      fortalecemos permanentemente la actualización y continuidad de nuestro proyecto educativo, por calidad, ajustándolo a las necesidades y demandas de la comunidad educativa, organizado en un equipo de trabajo para que el proceso de enseñanza se
+      de
+      en un clima favorable dentro y fuera del aula y donde además brindamos apoyo a los tutores y personal docente, para que las funciones de orientación y dirección faciliten a los alumnos un mejor acompañamiento donde se integran los espacios de
+      comunicación y sobre todo contar con el apoyo de los padres de familia para que nos permitan como comunidad de educadores estar presentes y favorecer el desarrollo de nuestro entorno.</h4>
+    <h2> Visión </h2>
+    <h4>Ser una institución fuerte con identidad propia, donde cada uno de los integrantes de esta comunidad se sienta comprometido con el aprendizaje y desarrollo personal de los alumnos y alumnas, para que alcancen el éxito a nivel escolar y
+      profesional, brindando para ello una educación humanista, científica y tecnológica, trabajo en equipo, plena participación democrática, alto espíritu crítico y creativo y que de acuerdo a las relaciones humanas todo se dé bajo un clima de
+      respeto honestidad, tolerancia, responsabilidad, personal, orden, autodisciplina y lealtad donde también intervengan los derechos humanos, valores cívicos, valores institucionales, ajustándolos a las necesidades y demandas de la comunidad
+      educativa, convencidos de que la educación es la base del cambio.</h4>
+    <h2> Historia </h2>
+    <h4>“CENTRO EDUCATIVO INTEGRAL EL SABER”, inicio sus labores docentes, en el año 1980 en el inmueble ubicado en la casa de ladrillo, atrás de gasolinera Shell, San José Pinula, en donde actualmente funciona las clínicas del IGSS; se apertura en
+      el
+      nivel de preprimaria y funcionó con el nombre de “JARDIN INFANTIL SAN JOSE”, estando activo durante cinco años, después de los cuales se solicita una ampliación de servicios para el nivel primaria. En esta cobertura se considera un nombre que
+      pueda integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL El SABER”.
+      Su fundadora y primera directora fue la Maestra de Educación Primaria Urbana María Martha Castilla quien cede la Dirección a su hija Anabella Eunice Maldonado Castilla y quién queda como directora de los niveles de preprimaria y primaria.
+      En el año de 2002 se traslada a otras instalaciones en la 2da. Calle 1-40 zona 2, donde actualmente funciona, ya con un inmueble con condiciones favorables se solicita la ampliación de servicios y jornadas especiales. Nivel Básico y
+      Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por Madurez, Bachillerato por
+      Madurez bajo la Dirección de Hugo Rolando Sandoval Castilla.
+    </h4>
+
+  </section>
+  <section id="niveles">
+
+  </section>
+
+  <section id="contacto">
+
+  </section>
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="js/index.js" type="text/javascript"></script>
+  <script type="text/javascript">
+      // console.log('Hola mundo! es mi primera linea en JS');
+      const ipad = window.matchMedia('screen and (max-width: 767px)')
+    const menu = document.querySelector('.menu');
+    // console.log(menu);
+    const burgerButton = document.querySelector('#burger-menu');
+    // console.log(burgerButton);
+    ipad.addListener(validation)
+
+    function validation(event) {
+      if (event.matches) {
+        burgerButton.addEventListener('click', hideShow)
+      } else {
+        burgerButton.removeEventListener('click', hideShow)
+      }
+    }
+    validation(ipad);
+
+    function hideShow() {
+      if (menu.classList.contains('is-active')) {
+        menu.classList.remove('is-active');
+      } else {
+        menu.classList.add('is-active');
+      }
+    }
+  </script>
 </body>
 
 </html>
