--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
+  <link href="css/tabs.css" rel="stylesheet">
   <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css" /> -->
 
 
@@ -25,7 +26,7 @@
   <i class="fa fa-bars burger-button" id="burger-menu"></i>
   <header class="header" id="Header">
     <div class="container">
-      <h3 class="">Colegio El Saber</h3>
+      <h3 class=""><u>Colegio</u> <u>El</u> <u>Saber</u></h3>
       <nav class="menu">
         <ol>
           <div class="container borderYtoX">
@@ -40,34 +41,68 @@
       </nav>
     </div>
   </header>
-  <div style="height: 70px;"></div>
+  <div style="height: 41px;"></div>
   <section id="inicio">
 
+    <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
 
-    <!-- <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo"> -->
-    <!-- <div id="carrousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/fondoP1.jpg" alt="el_saber_P1">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+      <!-- LISTA DE ELEMENTOS QUE DEBE MOSTRAR EL CARRUSEL -->
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      </ol>
+
+      <!-- ELEMENTOS QUE DEBE MOSTRAR EL CARRUSEL -->
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-md-block" src="img/fondoP1.jpg" alt="el_saber_P1">
+        </div>
+        <div class="carousel-item">
+          <img class="d-md-block" src="img/fondoP2.jpg" alt="el_saber_P2">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="img/fondoP2.jpg" alt="Second slide">
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
 
   </section>
+
+
   <section id="quienesSomos">
 
     <h2>¿Quienes Somos?</h2>
+    
+    <div class="tab">
+      <button id="defaultOpen" class="tablinks" onclick="openCity(event, 'London')">London</button>
+      <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+      <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+    </div>
+
+    <div id="London" class="tabcontent">
+      <h3>London</h3>
+      <p>London is the capital city of England.</p>
+    </div>
+
+    <div id="Paris" class="tabcontent">
+      <h3>Paris</h3>
+      <p>Paris is the capital of France.</p>
+    </div>
+
+    <div id="Tokyo" class="tabcontent">
+      <h3>Tokyo</h3>
+      <p>Tokyo is the capital of Japan.</p>
+    </div>
+
+
 
     <h2> Objetivo </h2>
     <h4>Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente aceptados, satisfechos y
