--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <i class="fa fa-bars burger-button" id="burger-menu"></i>
   <header class="header" id="Header">
     <div class="container">
-      <h3 class=""><u>Colegio</u> <u>El</u> <u>Saber</u></h3>
+      <h4 class=""><u>Centro</u> <u>Educativo</u> <u>Integral</u> <u>El</u> <u>Saber</u></h4>
       <nav class="menu">
         <ol>
           <div class="container borderYtoX">
 
-            <img style="text-align: center" class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
+            <img class="logoMenu" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
             <a href="#inicio">Inicio</a>
             <a href="#quienesSomos">¿Quienes Somos?</a>
             <a href="#niveles">Niveles</a>
@@ -46,12 +46,12 @@
 
     <img class="logo" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselIndex" class="carousel slide" data-ride="carousel">
 
       <!-- LISTA DE ELEMENTOS QUE DEBE MOSTRAR EL CARRUSEL -->
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselIndex" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndex" data-slide-to="1"></li>
       </ol>
 
       <!-- ELEMENTOS QUE DEBE MOSTRAR EL CARRUSEL -->
@@ -64,11 +64,11 @@
           <img class="d-md-block" src="img/fondoP2.jpg" alt="el_saber_P2">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselIndex" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselIndex" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -78,77 +78,165 @@
 
 
   <section id="quienesSomos">
+    <div class="container">
+      <h2 class="text-center">¿Quienes Somos?</h2>
 
-    <h2>¿Quienes Somos?</h2>
-    
-    <div class="tab">
-      <button id="defaultOpen" class="tablinks" onclick="openCity(event, 'London')">London</button>
-      <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-      <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+
+
+      <div class="tab">
+        <button id="defaultOpen" class="tablinks" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
+        <button class="tablinks" onclick="abrirPanel(event, 'Proposito')">Propósito</button>
+        <button class="tablinks" onclick="abrirPanel(event, 'Mision')">Misión</button>
+        <button class="tablinks" onclick="abrirPanel(event, 'Vision')">Visión</button>
+        <button class="tablinks" onclick="abrirPanel(event, 'Historia')">Historia</button>
+      </div>
+
+      <div id="Objetivo" class="tabcontent">
+        <h3 class="text-center">Objetivo</h3>
+        <p style="text-align: justify;">Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente aceptados, satisfechos y
+          felices,
+          con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</p>
+      </div>
+
+      <div id="Proposito" class="tabcontent">
+        <h3 class="text-center">Propósito</h3>
+        <p style="text-align: justify;">Como institución educativa ofrecer coeducación, y preparación individual, con elementos científicos y valores morales teniendo en cuenta su personalidad, nuevos modelos y cultura de paz dentro de un mundo competitivo.</p>
+      </div>
+
+      <div id="Mision" class="tabcontent">
+        <h3 class="text-center">Misión</h3>
+        <p style="text-align: justify;">Somos una institución educativa donde ofrecemos coeducación y preparación individual con elementos científicos, valores morales teniendo en cuenta su personalidad; valores educativos basados en la reforma educativa, CNB propuesta Mineduc
+          fortalecemos permanentemente la actualización y continuidad de nuestro proyecto educativo, por calidad, ajustándolo a las necesidades y demandas de la comunidad educativa, organizado en un equipo de trabajo para que el proceso de enseñanza
+          se
+          de
+          en un clima favorable dentro y fuera del aula y donde además brindamos apoyo a los tutores y personal docente, para que las funciones de orientación y dirección faciliten a los alumnos un mejor acompañamiento donde se integran los espacios
+          de
+          comunicación y sobre todo contar con el apoyo de los padres de familia para que nos permitan como comunidad de educadores estar presentes y favorecer el desarrollo de nuestro entorno.</p>
+      </div>
+
+      <div id="Vision" class="tabcontent">
+        <h3 class="text-center">Visión</h3>
+        <p style="text-align: justify;">Ser una institución fuerte con identidad propia, donde cada uno de los integrantes de esta comunidad se sienta comprometido con el aprendizaje y desarrollo personal de los alumnos y alumnas, para que alcancen el éxito a nivel escolar y
+          profesional, brindando para ello una educación humanista, científica y tecnológica, trabajo en equipo, plena participación democrática, alto espíritu crítico y creativo y que de acuerdo a las relaciones humanas todo se dé bajo un clima de
+          respeto honestidad, tolerancia, responsabilidad, personal, orden, autodisciplina y lealtad donde también intervengan los derechos humanos, valores cívicos, valores institucionales, ajustándolos a las necesidades y demandas de la comunidad
+          educativa, convencidos de que la educación es la base del cambio.</p>
+      </div>
+
+      <div id="Historia" class="tabcontent">
+        <h3 class="text-center">Historia</h3>
+        <p style="text-align: justify;">“CENTRO EDUCATIVO INTEGRAL EL SABER”, inicio sus labores docentes, en el año 1980 en el inmueble ubicado en la casa de ladrillo, atrás de gasolinera Shell, San José Pinula, en donde actualmente funciona las clínicas del IGSS; se apertura
+          en el de preprimaria y funcionó con el nombre de “JARDIN INFANTIL SAN JOSE”, estando activo durante cinco años, después de los cuales se solicita una ampliación de servicios para el nivel primaria. En esta cobertura se considera un nombre
+          que integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL El SABER”.
+          Su fundadora y primera directora fue la Maestra de Educación Primaria Urbana María Martha Castilla quien cede la Dirección a su hija Anabella Eunice Maldonado Castilla y quién queda como directora de los niveles de preprimaria y primaria.
+          En el año de 2002 se traslada a otras instalaciones en la 2da. Calle 1-40 zona 2, donde actualmente funciona, ya con un inmueble con condiciones favorables se solicita la ampliación de servicios y jornadas especiales. Nivel Básico y
+          Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por Madurez, Bachillerato
+          por bajo la Dirección de Hugo Rolando Sandoval Castilla.</p>
+        <br>
+        <p style="text-align: justify;">En el año 2008 se invierte en una nueva infraestructura ubicada el Lote 3, Manzana D, Sector Los Claveles de
+          Residenciales San José. Dos años más tarde se solicitan los servicios y se abre otro establecimiento
+          denominado Centro Educativo Integral El Saber No. 2 con los niveles de Preprimaria, Primaria y Básicos, siendo
+          propietario de este el Lic. Juan Carlos Marroquín Maldonado. En el año 2015 se solicita ampliación de servicios
+          y se autoriza las carreras de: Magisterio Infantil Bilingüe Intercultural, Bachillerato en Ciencia y Letras con
+          Orientación en Electricidad y Bachillerato en Ciencias y Letras con Orientación en Diseño Gráfico.</p>
+
+      </div>
     </div>
-
-    <div id="London" class="tabcontent">
-      <h3>London</h3>
-      <p>London is the capital city of England.</p>
-    </div>
-
-    <div id="Paris" class="tabcontent">
-      <h3>Paris</h3>
-      <p>Paris is the capital of France.</p>
-    </div>
-
-    <div id="Tokyo" class="tabcontent">
-      <h3>Tokyo</h3>
-      <p>Tokyo is the capital of Japan.</p>
-    </div>
-
-
-
-    <h2> Objetivo </h2>
-    <h4>Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente aceptados, satisfechos y
-      felices,
-      con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</h4>
-    <h2> Propósito </h2>
-    <h4>Como institución educativa ofrecer coeducación, y preparación individual, con elementos científicos y valores morales teniendo en cuenta su personalidad, nuevos modelos y cultura de paz dentro de un mundo competitivo.</h4>
-    <h2> Misión </h2>
-    <h4>Somos una institución educativa donde ofrecemos coeducación y preparación individual con elementos científicos, valores morales teniendo en cuenta su personalidad; valores educativos basados en la reforma educativa, CNB propuesta Mineduc
-      fortalecemos permanentemente la actualización y continuidad de nuestro proyecto educativo, por calidad, ajustándolo a las necesidades y demandas de la comunidad educativa, organizado en un equipo de trabajo para que el proceso de enseñanza se
-      de
-      en un clima favorable dentro y fuera del aula y donde además brindamos apoyo a los tutores y personal docente, para que las funciones de orientación y dirección faciliten a los alumnos un mejor acompañamiento donde se integran los espacios de
-      comunicación y sobre todo contar con el apoyo de los padres de familia para que nos permitan como comunidad de educadores estar presentes y favorecer el desarrollo de nuestro entorno.</h4>
-    <h2> Visión </h2>
-    <h4>Ser una institución fuerte con identidad propia, donde cada uno de los integrantes de esta comunidad se sienta comprometido con el aprendizaje y desarrollo personal de los alumnos y alumnas, para que alcancen el éxito a nivel escolar y
-      profesional, brindando para ello una educación humanista, científica y tecnológica, trabajo en equipo, plena participación democrática, alto espíritu crítico y creativo y que de acuerdo a las relaciones humanas todo se dé bajo un clima de
-      respeto honestidad, tolerancia, responsabilidad, personal, orden, autodisciplina y lealtad donde también intervengan los derechos humanos, valores cívicos, valores institucionales, ajustándolos a las necesidades y demandas de la comunidad
-      educativa, convencidos de que la educación es la base del cambio.</h4>
-    <h2> Historia </h2>
-    <h4>“CENTRO EDUCATIVO INTEGRAL EL SABER”, inicio sus labores docentes, en el año 1980 en el inmueble ubicado en la casa de ladrillo, atrás de gasolinera Shell, San José Pinula, en donde actualmente funciona las clínicas del IGSS; se apertura en
-      el
-      nivel de preprimaria y funcionó con el nombre de “JARDIN INFANTIL SAN JOSE”, estando activo durante cinco años, después de los cuales se solicita una ampliación de servicios para el nivel primaria. En esta cobertura se considera un nombre que
-      pueda integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL El SABER”.
-      Su fundadora y primera directora fue la Maestra de Educación Primaria Urbana María Martha Castilla quien cede la Dirección a su hija Anabella Eunice Maldonado Castilla y quién queda como directora de los niveles de preprimaria y primaria.
-      En el año de 2002 se traslada a otras instalaciones en la 2da. Calle 1-40 zona 2, donde actualmente funciona, ya con un inmueble con condiciones favorables se solicita la ampliación de servicios y jornadas especiales. Nivel Básico y
-      Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por Madurez, Bachillerato por
-      Madurez bajo la Dirección de Hugo Rolando Sandoval Castilla.
-    </h4>
 
   </section>
   <section id="niveles">
 
+    <!-- CARRUSEL TRIFOLIARES EL SABER 1 -->
+
+    <h3 class="text-center"> Jornadas <strong>Centro Educativo Integral El Saber 1</strong></h3>
+
+    <div id="carouselTrifoliar_el_saber_1" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselTrifoliar_el_saber_1" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselTrifoliar_el_saber_1" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/trifoliar_fin_de_semana_el_saber_1.jpg" alt="fin_de_semana">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/trifoliar_diversificado_diario_el_saber_1.jpg" alt="diversificado">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselTrifoliar_el_saber_1" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselTrifoliar_el_saber_1" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <!-- CARRUSEL TRIFOLIARES EL SABER 2 -->
+
+
+    <h3 class="text-center"> Jornadas <strong>Centro Educativo Integral El Saber 2</strong> </h3>
+    <div id="carouselTrifoliar_el_saber_2" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselTrifoliar_el_saber_2" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselTrifoliar_el_saber_2" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/trifoliar_diversificado_diario_el_saber_2.jpg" alt="diversificado">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/trifoliar_fin_de_semana_el_saber_2.jpg" alt="fin_de_semana">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselTrifoliar_el_saber_2" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselTrifoliar_el_saber_2" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
   </section>
 
   <section id="contacto">
-    <footer></footer>
-
+    <h2 class="text-center">¡Contáctanos!</h2>
+    <footer class="footer">
+      <div class="container centrar">
+        <div class="info" style="position: relative;">
+          <h3>Centro Educativo Integral El Saber 1</h3>
+          <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
+          <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
+        </div>
+      </div>
+      <div>
+        <br>
+        <div style="background-color: #ECFF00; color: black; padding: 1em;">
+          <h3 class="text-center">¡Síguenos!</h3>
+          <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img style="width: 50px;" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/facebook-icon.png" alt="Facebook_El_saber"></a>
+          <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img style="width: 50px;" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
+          <a href="mailto:centroeducativointegralelsaber@gmail.com"><img style="width: 50px;" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
+        </div>
+        <br>
+      </div>
+      <div class="container centrar">
+        <div class="info">
+          <h3>Centro Educativo Integral El Saber 2</h3>
+          <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
+          <a href="tel:+50266407305">Tel. 6640-7305</a> <small>← Click para llamar</small>
+        </div>
+      </div>
+    </footer>
   </section>
 
-
+  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RC SoftGroup</p>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="js/index.js" type="text/javascript"></script>
   <script type="text/javascript">
-    // console.log('Hola mundo! es mi primera linea en JS');
     const ipad = window.matchMedia('screen and (max-width: 767px)')
     const menu = document.querySelector('.menu');
     // console.log(menu);
