[0.7] Mejoras notorias en responsive con el header y el footer

--- a/index.html
+++ b/index.html
@@ -26,36 +26,34 @@
 
   <!-- HEADER -->
 
-  <nav class="header navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="header">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="header">
     <a class="navbar-brand" href="#">
       <img src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
-      <span style="vertical-align: middle;">Centro Educativo Integral El Saber</span>
+      <span class="titulo" style="vertical-align: middle;">Centro Educativo Integral El Saber</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbar">
-      <div class="container">
-        <div class="borderYtoX">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#inicio">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#niveles">Niveles</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-            <!-- <li class="nav-item">
+      <div class="container borderYtoX">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#inicio">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#niveles">Niveles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">Contacto</a>
+          </li>
+          <!-- <li class="nav-item">
               <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
             </li> -->
-          </ul>
-        </div>
+        </ul>
       </div>
     </div>
 
