[7.1] Corrección sobre el logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="header">
     <a class="navbar-brand" href="#">
-      <img src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/logo_el_saber.png" alt="logo">
+      <img src="img/logo_el_saber.png" alt="logo">
       <span class="titulo" style="vertical-align: middle;">Centro Educativo Integral El Saber</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#niveles">Niveles</a>
+            <a class="nav-link" href="/niveles">Niveles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contacto">Contacto</a>
@@ -56,13 +56,6 @@
         </ul>
       </div>
     </div>
-
-    <!-- <nav class="menu">
-        <ol>
-          <div class="container borderYtoX">
-          </div>
-        </ol>
-      </nav> -->
   </nav>
 
 
