--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
           <div class="container">
             <h3 class="text-center">¡Síguenos!</h3>
-            <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/facebook-icon.png" alt="Facebook_El_saber"></a>
-            <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
-            <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="/home/steve/Escritorio/Fa19/pagina_El_Saber/img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
+            <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
+            <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
+            <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
