[0.9] niveles.html creado y casi comleto. proceso terminado para una beta

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/niveles">Niveles</a>
+            <a class="nav-link" href="niveles.html">Niveles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contacto">Contacto</a>
@@ -88,7 +88,7 @@
   <section id="quienesSomos">
     <h1 style="color: black;" class="text-center">¿Quienes Somos?</h1>
     <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
+      <div class="col-12 col-sm-6 col-md-7 col-lg text-center pb-1">
         <div class="container">
           <div class="tab">
             <button id="defaultOpen" class="tablinks" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
@@ -164,9 +164,9 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
+      <div class="col-12 col-sm-6 col-md-2 col-lg text-center pb-1">
         <div class="container">
-          <img style="width: 450px;align-items: center;" src="img/logo_el_saber.png" alt="logo">
+          <img class="portada" src="img/logo_el_saber.png" alt="logo">
         </div>
       </div>
     </div>
@@ -185,7 +185,7 @@
             <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
+        <div class="col-12 col-sm-6 col-md-5 col-lg text-center pb-1">
           <div class="container">
             <h3 class="text-center">¡Síguenos!</h3>
             <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
@@ -197,7 +197,7 @@
           <div class="container">
             <h3>Centro Educativo Integral <br> El Saber 2</h3>
             <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
-            <a href="tel:+50266407305">Tel. 6640-7305</a> <small>← Click para llamar</small>
+            <a href="tel:+50266407305">Tel. 6640-7305</a> <br> <a href="tel:+50250620000">Tel. 5062-0000</a> <small>← Click para llamar</small> <br> <a href="tel:+50266343164">Tel. 6634-3164</a>
           </div>
         </div>
       </div>
