[0.9.1] Mapas agregados con una pestaña aparte aunque puede mejorar la distribución de la navegación de usuario. -creado ícono en la pestaña del logo del colegio

--- a/niveles.html
+++ b/niveles.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.ico"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,20 +63,23 @@
     </div>
     <div id="el_saber_1" class="tabcontent">
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link active" id="pre-primaria" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Pre-Primaria</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="primaria" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Primaria</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="basicos" data-toggle="pill" href="#pills-basicos" role="tab" aria-controls="pills-basicos" aria-selected="false">Básicos</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="diversificado" data-toggle="pill" href="#pills-diversificado" role="tab" aria-controls="pills-diversificado" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="finSemana" data-toggle="pill" href="#pills-finSemana" role="tab" aria-controls="pills-finSemana" aria-selected="false">Fin de Semana</a>
+        </li>
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
+          <a class="nav-link" id="ubicacion" data-toggle="pill" href="#pills-ubicacion" role="tab" aria-controls="pills-ubicacion" aria-selected="false">Ubicación</a>
         </li>
       </ul>
 
@@ -106,7 +110,6 @@
                 </li>
               </ul>
               <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
-
             </div>
           </div>
         </div>
@@ -268,24 +271,34 @@
             </div>
           </div>
         </div>
+        <div class="tab-pane fade show" id="pills-ubicacion" role="tabpanel" aria-labelledby="ubicacion">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1623.7571475346165!2d-90.41014597076315!3d14.543873805537666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc87e4d638e78629!2sCentro+Educativo+Integral+El+Saber!5e0!3m2!1ses-419!2sgt!4v1540962910093"
+            width="800" height="650" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
       </div>
     </div>
+
+
+
+
     <div id="el_saber_2" class="tabcontent scroll">
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link active" id="pre-primaria2" data-toggle="pill" href="#pills-pre-primaria2" role="tab" aria-controls="pills-pre-primaria2" aria-selected="true">Pre-Primaria</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="primaria2" data-toggle="pill" href="#pills-primaria2" role="tab" aria-controls="pills-primaria2" aria-selected="false">Primaria</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="basicos2" data-toggle="pill" href="#pills-basicos2" role="tab" aria-controls="pills-basicos2" aria-selected="false">Básicos</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab" aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="finSemana2" data-toggle="pill" href="#pills-finSemana2" role="tab" aria-controls="pills-finSemana2" aria-selected="false">Fin de Semana</a>
+        </li>
+        <li class="nav-item col-lg-2 col-sm-4 col-6">
+          <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab" aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
         </li>
       </ul>
 
@@ -473,38 +486,36 @@
             </div>
           </div>
         </div>
+        <div class="tab-pane fade show" id="pills-ubicacion2" role="tabpanel" aria-labelledby="ubicacion2">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1148.2966935565717!2d-90.40776420563567!3d14.51942477658745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x919826d065a91b04!2sCentro+Educativo+Integral+El+Saber+2!5e0!3m2!1ses-419!2sgt!4v1540960339512"
+            width="800" height="650" frameborder="0" style="border:1px solid blue;" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
+    <br>
+    <div class="col-12">
+      <h3>Los pagos se realizan en fechas del 1 al 10 de cada mes en Banco del sistema indicado por el establecimiento del 11 de cada mes en adelante se generan cargos por mora. (Aplica a diario y fin de semana).</h3>
+    </div>
+    <br>
   </div>
-  <br>
-  <div class="container">
-    <h3 class="text-center">Los pagos se realizan en fechas del 1 al 10 de cada mes en Banco del sistema indicado por el establecimiento del 11 de cada mes en adelante se generan cargos por mora. (Aplica a diario y fin de semana).</h3>
-  </div>
-  <br>
   <footer id="footer" class="pb-4 pt-4">
     <h3 class="text-center">¡Contáctanos!</h3>
     <div class="row">
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
-        <div class="container">
-          <h3>Centro Educativo Integral <br> El Saber 1</h3>
-          <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
-          <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-5 col-lg text-center pb-1">
-        <div class="container">
-          <h3 class="text-center">¡Síguenos!</h3>
-          <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
-          <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
-          <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
-        </div>
+        <h3>Centro Educativo Integral <br> El Saber 1</h3>
+        <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
+        <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
-        <div class="container">
-          <h3>Centro Educativo Integral <br> El Saber 2</h3>
-          <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
-          <a href="tel:+50266407305">Tel. 6640-7305</a> <br> <a href="tel:+50250620000">Tel. 5062-0000</a> <small>← Click para llamar</small> <br> <a href="tel:+50266343164">Tel. 6634-3164</a>
-        </div>
+        <h3 class="text-center">¡Síguenos!</h3>
+        <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
+        <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
+        <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
+        <h3>Centro Educativo Integral <br> El Saber 2</h3>
+        <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
+        <a href="tel:+50266407305">Tel. 6640-7305</a> <br> <a href="tel:+50250620000">Tel. 5062-0000</a> <small>← Click para llamar</small> <br> <a href="tel:+50266343164">Tel. 6634-3164</a>
       </div>
     </div>
   </footer>
