[0.9.2] Correcciones, mejores distribuciones en css e Index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <!-- TÍTULO -->
-  <title>Colegio El Saber - Pagina Principal</title>
+  <title>Pagina Principal | Centro Educativo Integral El Saber</title>
 
   <!-- LINKS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -89,7 +89,7 @@
   <section id="quienesSomos">
     <h1 style="color: black;" class="text-center">¿Quienes Somos?</h1>
     <div class="row">
-      <div class="col-12 col-sm-6 col-md-7 col-lg text-center pb-1">
+      <div class="col-12 col-sm-8 col-md-8 text-center pb-1">
         <div class="container">
           <div class="tab">
             <button id="defaultOpen" class="tablinks" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
@@ -165,7 +165,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-2 col-lg text-center pb-1">
+      <div class="col-12 col-sm-4 col-md-4 text-center pb-1">
         <div class="container">
           <img class="portada" src="img/logo_el_saber.png" alt="logo">
         </div>
@@ -186,7 +186,7 @@
             <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-5 col-lg text-center pb-1">
+        <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
           <div class="container">
             <h3 class="text-center">¡Síguenos!</h3>
             <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
